--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="Home.css">
+    <link rel='stylesheet' href='MyStyle.css' >
     <link rel="stylesheet" href="https://techydevs.com/demos/themes/html/zobstar/css/bootstrap.min.css">
     <title>React App</title>
   </head>
